--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,88 @@
+/* Обнуление (Начальные настройки шаблона) */
+*,
+*::before,
+*::after {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul,
+ol,
+li {
+    list-style: none;
+}
+
+img {
+    vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-weight: inherit;
+    font-size: inherit;
+}
+
+html,
+body {
+    height: 100%;
+    line-height: 1;
+    font-size: 16px;
+    color: #000;
+    /*font-family: Laila;*/
+}
+
+/* хз чет шрифты не подлючились*/
+/*@import url('https://fonts.googleapis.com/css2?family=Laila&display=swap');*/
+
 .wrapper {
     min-height: 100%;
     overflow: hidden; /*свойство скроет все лишнее (хз что)*/
 }
+/* Обнуление закончилось */
+
+
+/* Контейнер в котором будет лежать верстка (ограничивающий контейнер)*/
+._container {
+    max-width: 1600px;  /*ширина окна*/
+    margin: 0px auto;  /* выстраиваем блок по центру */
+
+}
+
+/*шрифты не подключились*/
+/*h1 {
+    font-family: 'Laila', sans-serif;
+    font-weight: 500;
+}*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
